<resources>
    <string name="app_name">temp1</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_item_list">Items</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="title_activity_main3">Main3Activity</string>
    <string name="tab_text_1">Music</string>
    <string name="tab_text_2">Drama</string>
    <string name="tab_text_3">Painting</string>
    <string name="tab_text_4">Meditation</string>
    <string name="tab_text_5">Asanas</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="mood_diary">Diary</string>
    <string name="ai_bot">AI Bot</string>
    <string name="art">Art</string>
    <string name="sleep">Sleep</string>
    <string name="yoga">Yoga</string>
    <string name="hh_mm_ss">HH:mm:ss</string>
    <string name="title">Title</string>
    <string name="title_activity_tmp">tmp</string>
    <string name="more">More</string>
    <string name="bot">Bot</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="no_of_remaining_attemps">No of remaining attemps :</string>
    <string name="new_user_sign_up">New user? Sign Up</string>
    <string name="guest_user">Guest User</string>
    <string name="forgot_password">Forgot Password?</string>
</resources>
