<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
            android:id="@+id/mood_diary"
            android:icon="@drawable/ic_journal"
            android:title="@string/mood_diary"/>
    <item
            android:id="@+id/yoga"
            android:icon="@drawable/ic_menu_yoga"
            android:title="@string/yoga"/>
    <item
            android:id="@+id/navigation_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/title_home"/>
<item
            android:id="@+id/art"
            android:icon="@drawable/ic_menu_music"
            android:title="@string/art"/>

    <item
            android:id="@+id/more"
            android:icon="@drawable/ic_more_vert_black_24dp"
            android:title="@string/more"/>

</menu>
